syntax = "proto3";

package pb.v1alpha1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/orby-ai-engineering/web-api-server/pb/v1alpha1";

// Designed based on https://pkg.go.dev/golang.org/x/oauth2#Token
// Excluding the "raw" field which is not used in our codebase now.
message Oauth2Token {
  string access_token = 1;
  string token_type = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp expiry = 4;
}
